# drakon-ai

./: .gitignore  CMakeLists.txt  README.md  add_dev_updates.py  dev_log.md  instructions.md  requirements.txt  structure.txt
api/: main.py  test_ws_client.py
api/routes/: module_routes.py
cli/: main.py
core/: config.py  gguf_parser.py  model_loader.py  tokenizer.py
include/: activation_functions.h  backend.h  config.h  dataset.h  drakon.h  drakon_cli.h  layers.h  model_loader.h  ops.h  optimizer.h  tensor.h  tensor_ops.h  tokenizer.h  utils.h
include/layers/: linear.h  mlp.h
modules/llm_engine/: runner.py
python/: drakon_python.cpp  evaluate.py  model_export.py  preprocess.py  train.py
src/: activation_functions.cpp  backend.cpp  config.cpp  dataset.cpp  drakon.cpp  drakon_cli.cpp  drakon_model.cpp  evaluate.cpp  generate_dummy_weights.cpp  layers.cpp  main.cpp  model_loader.cpp  ops.cpp  optimizer.cpp  tensor.cpp  tensor_ops.cpp  test_inference.cpp  test_tensor.cpp  test_tensor_ops.cpp  tokenizer.cpp  train.cpp  utils.cpp
src/layers/: linear.cpp  mlp.cpp
tests/: test_dataset.cpp  test_end_to_end.cpp  test_layers.cpp  test_optimizer.cpp  test_parser.py  test_tensor.cpp
